<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <LinearLayout style="@style/UA.EditText.Layout">
        <ImageView android:src="@drawable/ua_ic_reg_mobile" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableLeft" />
        <com.yy.udbauth.ui.widget.UdbEditText android:id="@id/ua_sms_login_et_mobile" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/ua_sms_login_mobile_hint" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="phone" style="@style/UA.EditText.Theme" />
        <ImageButton android:id="@id/ua_sms_login_btn_clear_mobile" android:src="@drawable/ua_ic_delete" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
    </LinearLayout>
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <LinearLayout style="@style/UA.EditText.Layout">
        <ImageView android:src="@drawable/ua_ic_reg_token" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableLeft" />
        <com.yy.udbauth.ui.widget.UdbEditText android:id="@id/ua_sms_login_et_smscode" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:hint="@string/ua_sms_login_sms_code_hint" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="number" style="@style/UA.EditText.Theme" />
        <ImageButton android:id="@id/ua_sms_login_btn_clear_sms_code" android:src="@drawable/ua_ic_delete" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
        <com.yy.udbauth.ui.widget.UdbButton android:textSize="15.0sp" android:id="@id/ua_sms_login_btn_get_sms_code" android:layout_width="130.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/ua_sms_login_btn_get_sms_code" android:singleLine="true" style="@style/UA.Button.Theme" />
    </LinearLayout>
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <Button android:enabled="false" android:id="@id/ua_sms_login_btn_login" android:layout_width="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="37.0dip" android:layout_marginRight="15.0dip" android:text="@string/ua_sms_login_btn_login" style="@style/UA.Button.Theme" />
    <RelativeLayout android:paddingLeft="15.0dip" android:paddingTop="22.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/ua_sms_login_btn_password_login" android:background="@null" android:text="@string/ua_sms_login_btn_password_login" android:layout_alignParentRight="true" style="@style/UA.TextView.Normal" />
    </RelativeLayout>
</LinearLayout>