<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:id="@id/ua_find_my_password_tv_secmobile" android:background="@null" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="true" android:layout_height="58.0dip" android:text="@string/ua_find_my_password_mobile_hint" style="@style/UA.TextView.Normal" />
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <LinearLayout style="@style/UA.EditText.Layout">
        <ImageView android:src="@drawable/ua_ic_reg_mobile" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableLeft" />
        <com.yy.udbauth.ui.widget.UdbEditText android:id="@id/ua_find_my_password_et_mobile" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/ua_find_my_password_mobile_et_hint" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="phone" style="@style/UA.EditText.Theme" />
        <ImageButton android:id="@id/ua_find_my_password_btn_clear_mobile" android:src="@drawable/ua_ic_delete" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
    </LinearLayout>
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <Button android:id="@id/ua_find_my_password_btn_goto_step3" android:layout_width="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="37.0dip" android:layout_marginRight="15.0dip" android:text="@string/ua_find_my_password_btn_next" style="@style/UA.Button.Theme" />
</LinearLayout>