<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View style="@style/UA.Divider.Solid.Horizontal" />
        <LinearLayout android:id="@id/ua_login_ll_username" style="@style/UA.EditText.Layout">
            <ImageView android:src="@drawable/ua_ic_username" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableLeft" />
            <com.yy.udbauth.ui.widget.UdbEditText android:id="@id/ua_login_et_username" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/ua_login_username_hint" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" style="@style/UA.EditText.Theme" />
            <ImageButton android:id="@id/ua_login_btn_clear_username" android:src="@drawable/ua_ic_delete" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
            <ImageButton android:id="@id/ua_login_btn_show_accounts_list" android:layout_marginLeft="5.0dip" android:src="@drawable/ua_ic_stretch" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
        </LinearLayout>
        <View style="@style/UA.Divider.Solid.Horizontal" />
        <LinearLayout style="@style/UA.EditText.Layout">
            <ImageView android:src="@drawable/ua_ic_lg_password" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableLeft" />
            <com.yy.udbauth.ui.widget.UdbEditText android:id="@id/ua_login_et_password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/ua_login_password_hint" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="textPassword" style="@style/UA.EditText.Theme" />
            <ImageButton android:id="@id/ua_login_btn_clear_password" android:src="@drawable/ua_ic_delete" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
            <CheckBox android:id="@id/ua_login_cb_show_password" android:background="@null" android:layout_marginLeft="5.0dip" android:checked="false" android:button="@drawable/ua_selector_checkbox_password_visable" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
        </LinearLayout>
        <View style="@style/UA.Divider.Solid.Horizontal" />
        <Button android:id="@id/ua_login_btn_login" android:layout_width="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="37.0dip" android:layout_marginRight="15.0dip" android:text="@string/ua_login_btn_login" style="@style/UA.Button.Theme" />
        <RelativeLayout android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.0dip">
            <TextView android:id="@id/ua_login_btn_find_my_password" android:clickable="true" android:text="@string/ua_login_btn_find_my_password" android:layout_alignParentLeft="true" style="@style/UA.TextView.Normal" />
            <TextView android:id="@id/ua_login_btn_sms_login" android:background="@null" android:clickable="true" android:text="@string/ua_login_btn_sms_login" android:layout_alignParentRight="true" style="@style/UA.TextView.Normal" />
        </RelativeLayout>
    </LinearLayout>
    <Button android:textSize="18.0sp" android:textStyle="bold" android:id="@id/ua_login_btn_register" android:background="@null" android:layout_marginBottom="30.0dip" android:text="@string/ua_login_btn_register" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/UA.TextView.Theme" />
</RelativeLayout>