<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:background="@null" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:clickable="true" android:layout_height="58.0dip" android:text="@string/ua_find_my_password_new_password_hint" style="@style/UA.TextView.Normal" />
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <LinearLayout style="@style/UA.EditText.Layout">
        <ImageView android:src="@drawable/ua_ic_ok_password" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableLeft" />
        <com.yy.udbauth.ui.widget.UdbEditText android:id="@id/ua_find_my_password_et_password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/ua_find_my_password_new_password_hint" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="textPassword" style="@style/UA.EditText.Theme" />
        <ImageButton android:id="@id/ua_find_my_password_btn_clear_password" android:src="@drawable/ua_ic_delete" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
        <CheckBox android:id="@id/ua_find_my_password_cb_show_password" android:background="@null" android:layout_marginLeft="5.0dip" android:checked="false" android:button="@drawable/ua_selector_checkbox_password_visable" android:contentDescription="@string/ua_contentDescription" style="@style/UA.EditText.DrawableRight" />
    </LinearLayout>
    <View style="@style/UA.Divider.Solid.Horizontal" />
    <TextView android:visibility="visible" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/ua_find_my_password_tip" style="@style/UA.TextView.Normal.Small" />
    <Button android:id="@id/ua_find_my_password_btn_submit" android:layout_width="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/ua_find_my_password_btn_submit" style="@style/UA.Button.Theme" />
</LinearLayout>