<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@mipmap/clapperboard" android:scaleType="centerCrop" android:contentDescription="@string/img_placeholder" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:id="@id/joining_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
        <TextView android:textColor="@color/gray60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inviting_msg_long" />
        <Button android:textColor="@color/bright_green" android:id="@id/button_join_program" android:background="@color/transparent" android:layout_width="64.0dip" android:layout_height="wrap_content" android:text="@string/inviting_msg_short" />
    </LinearLayout>
    <ImageButton android:id="@id/button_create_program" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="155.0dip" android:src="@drawable/selector_camera_ring_green" android:contentDescription="@string/img_placeholder" app:layout_constraintBottom_toTopOf="@id/joining_bar" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>